@@ -1,0 +1,7 @@
+package testpackage
+
+context Class1
+-- Change to Class1.allInstances() when bug in parser is fixed.
+inv: self.allInstances()-> size() > 0
+
+endpackage
